--- a/template.conf
+++ b/template.conf
@@ -3,7 +3,7 @@
         DocumentRoot "%ROOT%/htdocs"
         AssignUserId %USERNAME% %USERNAME%
 	UseCanonicalName On
-	%ALIAS%
+	%CUSTOM%
 	<Directory %ROOT%/htdocs>
 		Options FollowSymLinks
 		Order allow,deny
