--- a/config.cfg
+++ b/config.cfg
@@ -10,3 +10,5 @@ backhost=192.168.0.1
 backuser=test
 backpass=pass
 directory=/var/backup/
+
+# TODO: Раздели на подсекции - ничего не понятно кому какая переменная
