Apache logging improved

--- a/template.conf
+++ b/template.conf
@@ -3,10 +3,19 @@
         DocumentRoot "%ROOT%/htdocs"
         AssignUserId %USERNAME% %USERNAME%
 	UseCanonicalName On
+#        ProxyPreserveHost On
+#        <Proxy *>
+#                Order allow,deny
+#                Allow from all
+#        </Proxy>
+#        ProxyPass        /  http://194.85.160.59:80/
 	%CUSTOM%
+	ErrorLog "%ROOT%/logs/error.log"
+	CustomLog "%ROOT%/logs/access.log" common
 	<Directory %ROOT%/htdocs>
 		Options FollowSymLinks
 		Order allow,deny
 		Allow from all
+		AllowOverride All
 	</Directory>
 </VirtualHost>
